--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@nextui-org/react": "^2.2.9",
     "framer-motion": "^11.0.5",
     "next": "14.1.0",
+    "next-auth": "^5.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
     "remixicon": "^4.1.0",
     "swiper": "^11.0.7"
   },
   "devDependencies": {
+    "@types/node": "20.14.10",
+    "@types/react": "18.3.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
