--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@reduxjs/toolkit": "^2.2.7",
     "framer-motion": "^11.0.5",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
     "remixicon": "^4.1.0",
     "swiper": "^11.0.7"
   },
