--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "framer-motion": "^11.0.5",
     "next": "14.1.0",
-    "next-auth": "^5.0.0-beta.19",
+    "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
