--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.2.9",
     "@reduxjs/toolkit": "^2.2.7",
     "framer-motion": "^11.0.5",
+    "mongodb": "^6.9.0",
     "next": "14.1.0",
     "next-auth": "^4.24.8",
     "react": "^18",
