--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "@reduxjs/toolkit": "^2.2.7",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^11.0.5",
     "mongodb": "^6.9.0",
     "next": "14.1.0",
@@ -22,6 +23,7 @@
     "swiper": "^11.0.7"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "20.14.10",
     "@types/react": "18.3.3",
     "autoprefixer": "^10.0.1",
