--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "remixicon": "^4.1.0",
+    "sharp": "^0.33.5",
     "swiper": "^11.0.7"
   },
   "devDependencies": {
