--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroui/react": "^2.7.5",
     "@hookform/resolvers": "^4.1.3",
     "@reduxjs/toolkit": "^2.6.1",
+    "@uiw/react-md-editor": "^4.0.5",
     "framer-motion": "^12.5.0",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
@@ -23,6 +24,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
+    "react-select": "^5.10.1",
     "remixicon": "^4.6.0",
     "swiper": "^11.2.5",
     "zod": "^3.24.2"
