--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@hookform/resolvers": "^4.1.3",
     "@reduxjs/toolkit": "^2.6.1",
     "@uiw/react-md-editor": "^4.0.5",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.5.0",
+    "js-cookie": "^3.0.5",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
