--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "js-cookie": "^3.0.5",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
+    "nookies": "^2.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
