--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@hookform/resolvers": "^4.1.3",
     "@reduxjs/toolkit": "^2.6.1",
     "@uiw/react-md-editor": "^4.0.5",
+    "dompurify": "^3.2.5",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.5.0",
     "js-cookie": "^3.0.5",
+    "marked": "^15.0.8",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
     "nookies": "^2.5.2",
@@ -26,6 +28,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-select": "^5.10.1",
     "remixicon": "^4.6.0",
