--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^4.1.3",
     "@reduxjs/toolkit": "^2.6.1",
     "@uiw/react-md-editor": "^4.0.5",
+    "critters": "^0.0.23",
     "dompurify": "^3.2.5",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.5.0",
