--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@heroui/react": "^2.7.5",
     "@hookform/resolvers": "^4.1.3",
     "@reduxjs/toolkit": "^2.6.1",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.0",
     "@uiw/react-md-editor": "^4.0.5",
     "critters": "^0.0.23",
     "dompurify": "^3.2.5",
