--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "format": "prettier --write .",
     "format:check": "prettier --check ."
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "@heroui/react": "^2.7.5",
     "@hookform/resolvers": "^4.1.3",
