--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,12 +3,13 @@ name: Deploy to Droplet
 on:
   push:
     branches: [main]
+    
 
 jobs:
   deploy:
     name: Deploy via SSH
     runs-on: ubuntu-latest
-
+    environment: production
     steps:
       - name: Deploy to Droplet
         uses: appleboy/ssh-action@v1.0.0
