--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
               host: ${{ secrets.DROPLET_HOST }}
               username: ${{ secrets.DROPLET_USER }}
               key: ${{ secrets.DROPLET_SSH_KEY }}
-              timeout: 600 
+              timeout: 600s
               script: |
                 cd /var/www/embroidize-frontend
                 git pull origin main
