--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "15.2.2",
     "next-themes": "^0.4.6",
     "nookies": "^2.5.2",
+    "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
