--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "@heroui/react": "^2.7.5",
+    "@heroui/navbar": "^2.2.21",
+    "@heroui/react": "^2.8.1",
     "@hookform/resolvers": "^4.1.3",
     "@reduxjs/toolkit": "^2.6.1",
     "@stripe/react-stripe-js": "^3.7.0",
@@ -24,7 +25,7 @@
     "critters": "^0.0.23",
     "dompurify": "^3.2.5",
     "dotenv": "^16.4.7",
-    "framer-motion": "^12.5.0",
+    "framer-motion": "^12.23.6",
     "js-cookie": "^3.0.5",
     "marked": "^15.0.8",
     "next": "15.2.2",
