--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "@heroui/divider": "^2.2.16",
     "@heroui/react": "^2.7.5",
     "@hookform/resolvers": "^4.1.3",
     "@reduxjs/toolkit": "^2.6.1",
@@ -22,11 +23,14 @@
     "@stripe/stripe-js": "^7.3.0",
     "@tailwindcss/typography": "^0.5.16",
     "@uiw/react-md-editor": "^4.0.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "critters": "^0.0.23",
     "dompurify": "^3.2.5",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.5.0",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.526.0",
     "marked": "^15.0.8",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
@@ -41,6 +45,8 @@
     "react-select": "^5.10.1",
     "remixicon": "^4.6.0",
     "swiper": "^11.2.5",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
   },
   "devDependencies": {
