--- a/package.json
+++ b/package.json
@@ -15,8 +15,14 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "@heroui/divider": "^2.2.16",
-    "@heroui/react": "^2.7.5",
+    "@heroui/accordion": "2.2.13",
+    "@heroui/alert": "2.2.13",
+    "@heroui/autocomplete": "2.3.17",
+    "@heroui/avatar": "2.2.13",
+    "@heroui/divider": "2.2.11",
+    "@heroui/form": "2.1.15",
+    "@heroui/react": "2.7.5",
+    "@heroui/theme": "2.4.12",
     "@hookform/resolvers": "^4.1.3",
     "@reduxjs/toolkit": "^2.6.1",
     "@stripe/react-stripe-js": "^3.7.0",
@@ -32,7 +38,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.526.0",
     "marked": "^15.0.8",
-    "next": "15.2.2",
+    "next": "^15.4.5",
     "next-themes": "^0.4.6",
     "nookies": "^2.5.2",
     "quill": "^2.0.3",
@@ -46,8 +52,12 @@
     "remixicon": "^4.6.0",
     "swiper": "^11.2.5",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
+  },
+  "overrides": {
+    "cookie": "0.7.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
