--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next": "^15.4.5",
     "next-themes": "^0.4.6",
     "nookies": "^2.5.2",
+    "nprogress": "^0.2.0",
     "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -57,7 +58,8 @@
     "zod": "^3.24.2"
   },
   "overrides": {
-    "cookie": "0.7.0"
+    "cookie": "0.7.0",
+    "@heroui/system": "2.4.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
