--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-select": "^5.10.1",
+    "recharts": "^3.1.2",
     "remixicon": "^4.6.0",
     "swiper": "^11.2.5",
     "tailwind-merge": "^3.3.1",
