--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@heroui/react": "2.7.5",
     "@heroui/theme": "2.4.12",
     "@hookform/resolvers": "^4.1.3",
+    "@next/third-parties": "^16.1.1",
     "@reduxjs/toolkit": "^2.6.1",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.0",
